tests/examples/errors/modules/CircularImport/pong.hkf
module exporting *

import errors.modules.CircularImport.ping
